PROJECT(thrpool)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

#include (${CMKE_HOME_DIRECTORY}/config/toolchain-cross.cmake)

SET(CMAKE_C_FLAGS "-g -lm -fPIC")

#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin/)

#SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/bin/)

FILE(GLOB_RECURSE SRC_LIST "src/*.c")

FILE(GLOB_RECURSE UTILS_LIST "utils/*.c")

SET (INCLUDE_DIRS "include/")

INCLUDE_DIRECTORIES(${INCLUDE_DIRS})

FIND_PACKAGE(Threads)

ADD_LIBRARY(thrpool SHARED ${SRC_LIST} ${UTILS_LIST})

ADD_EXECUTABLE(test "main/main.c")

TARGET_LINK_LIBRARIES(test thrpool ${CMAKE_THREAD_LIBS_INIT})



